feat - cart - Add API endpoint to add items to cart
